--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-spring.rsocket.server.port=7000
+#spring.rsocket.server.port=7000
 spring.main.lazy-initialization=true
+server.port=8090
+
+spring.datasource.url=jdbc:mysql://localhost:3308/comment
+spring.datasource.username=comment-rpc
+spring.datasource.password=comment-rpc
