--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -14,6 +14,7 @@
     "rsocket-flowable": "^0.0.10",
     "rsocket-types": "^0.0.10",
     "rsocket-websocket-client": "^0.0.10",
+    "winston": "^3.8.1",
     "ws": "^8.8.1"
   }
 }
